Bug 155306 - Footnotes numbering start per Page in a section with more than 1 column always shows 0
Summary: Footnotes numbering start per Page in a section with more than 1 column alway...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.6.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords: bibisected, bisected, regression
: 170042 (view as bug list)
Depends on:
Blocks: Footnote-Endnote Page-Layout-Columns
  Show dependency treegraph
 
Reported: 2023-05-14 23:25 UTC by Hudson
Modified: 2025-12-22 12:04 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with the mentioned bug. (15.79 KB, application/vnd.oasis.opendocument.text)
2023-05-16 10:47 UTC, Hudson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hudson 2023-05-14 23:25:11 UTC
Description:
When I insert footnotes in a text in two columns, the number and disposition of footnotes are incorrect.

Steps to Reproduce:
1. Insert dummy text into one page only.
2. Configure that text in two columns.
3. Go to Tools->Footnotes and Endnotes.
4. Configure numbering footnotes by page.
5. Insert two footnotes in that text.

Actual Results:
The footnote numbering is incorrect (usually starting on 0 and not incrementing).

Expected Results:
Numbering correct.


Reproducible: Always


User Profile Reset: No

Additional Info:
None.
Comment 1 Robert Großkopf 2023-05-15 06:29:32 UTC
Have tried this in LO 7.4.6.2. Couldn't find any buggy behavior with OpenSUSE 15.4 64bit rpm Linux.

Please add a little example here, which shows wrong numbering of footnotes.
Try also with starting LO in Safe Mode.
Comment 2 Hudson 2023-05-16 10:47:09 UTC
Created attachment 187325 [details]
Example file with the mentioned bug.

Behold the file with a bogus example of use of numbering footnote by page presenting a problematic numbering.
Comment 3 Robert Großkopf 2023-05-16 13:23:31 UTC
You have created a separate section for setting two columns.
Set cursor in this section. 
Right mouse click → Edit Sections.
In this dialog chose Options → Footnotes/Endnotes.
Set Footnotes → Collect at end of text
Footnotes will appear in the section and will be numbered well.

Then I had a look what is going wrong with the footnotes, because I couldn't reproduce with the same kind of document.

Go to the footnote at the bottom of the page. 
Right mouse click → Footnotes and Endnotes
Counting is greyed out.
Set Start at → Per document
Position → End of Page

This are the default settings here. It will show the right footnote at the bottom of the page.
Comment 4 Hudson 2023-05-16 17:33:18 UTC
Hi!

Thanks by your attention for me.

I have tried reproduce the error and it continues appearing. Behold, I need to put columns with numbering footnotes "by page".

I follow your suggestion, but I got the same error yet. Try to do the following:

1) Create two sections, one in each page.

2) In each section, insert two footnotes.

3) Configure in Tools->Footnotes and Endnotes, numbering "by page".

4) Try to do your suggestion (is what I did), but the error remains.

Regards,
Comment 5 Robert Großkopf 2023-05-16 19:19:55 UTC
Have now tested the difference between 2 columns setting in page style and setting in a section.

This is the way to reproduce the error:
Open a Writer document.
Insert → Section (with 2 columns)
Tools → Footnotes → Start at → per Page

Enter some text content and add a footnote.
Number for this footnote will be 0.
Enter next footnote.
Number will also be 0.

This bug doesn't appear in a section with 1 column.
This bug doesn't appear if page is set to 2 columns and no section is used.

Bug appears in
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 6; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

This bug doesn't appear in LO 7.3.0.3, but appears in LO 7.3.6.2. So a regression
Comment 6 Hudson 2023-07-19 18:38:48 UTC
Apparently, I've identified the problem more specifically. When, in the crossing of the page, I put one footnote, in the last line of the page, the Writer presents the problem, because the line should go to next page, but the footnote doesn't fit in the page of its occurrence. The program confound the numbering with position of footnote.
Comment 7 raal 2023-07-20 16:54:55 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.4.
Adding Cc: to Attila Szűcs ; Could you possibly take a look at this one?
Thanks
 0f3ce53461d7e3b4e357a3276869be7e1eb4dd7b is the first bad commit
commit 0f3ce53461d7e3b4e357a3276869be7e1eb4dd7b
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Feb 15 17:09:05 2022 +0100

    source 9a457c24ab2731c99f1a5fa1d28f68788e6977f3

129896: tdf#146704 sw: fix regression of endnote layout in sections | https://gerrit.libreoffice.org/c/core/+/129896
Comment 8 Justin L 2025-10-24 15:36:58 UTC
repro 26.2+
Comment 9 Mike Kaganski 2025-12-20 05:40:03 UTC
*** Bug 170042 has been marked as a duplicate of this bug. ***
Comment 10 Mike Kaganski 2025-12-20 07:23:29 UTC
https://gerrit.libreoffice.org/c/core/+/195948
Comment 11 Commit Notification 2025-12-20 08:41:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ec14ca63fc02240c6df862dd78616c140606a24

tdf#155306: find the correct footnote boss frame

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-12-22 12:04:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/185f6d85784e9f3ccd5fa8566b65d006166b238b

tdf#155306: find the correct footnote boss frame

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.