tdf#155306: find the correct footnote boss frame

SwFrame::FindFootnoteBossFrame may return different results depending
on the note type (footnoote / endnote). Unfortunately, there is a mess
in the code, where in most places, the method is called with default
argument value. This change fixes one such place.

Change-Id: I66f18b88f4ceeb7b9626a66d6459ef376c03eb07
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195948
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 4ec14ca63fc02240c6df862dd78616c140606a24)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196072
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>