sw/source/core/layout/ftnfrm.cxx
@@ -1277,7 +1277,8 @@ const SwFootnoteFrame *SwFootnoteBossFrame::FindFirstFootnote( SwContentFrame co
             }
             if ( pRet )
             {
-                const SwFootnoteBossFrame* pBoss = pRet->GetRef()->FindFootnoteBossFrame();
+                const SwFootnoteBossFrame* pBoss = pRet->GetRef()->FindFootnoteBossFrame(
+                    !pRet->GetAttr()->GetFootnote().IsEndNote());
                 if( !pBoss || pBoss->GetPhyPageNum() != nPageNum ||
                     nColNum != lcl_ColumnNum( pBoss ) )
                     pRet = nullptr;
